--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "regex"
   ],
   "author": "Austin Martin (auz.martin@gmail.com)",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/auzmartist/search-loader.git"
+  },
   "license": "ISC",
   "dependencies": {
     "loader-utils": "^1.1.0",
