--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "search-loader",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Search and match file contents for regex patterns.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/index.js"
   },
   "keywords": [
     "webpack",
@@ -21,5 +21,8 @@
   "dependencies": {
     "loader-utils": "^1.1.0",
     "schema-utils": "^1.0.0"
+  },
+  "devDependencies": {
+    "webpack": "^4.30.0"
   }
 }
